[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -23.5002, -18.1934, 0, 0, 0, 0, 506, -22.6934, 0, 0, 0, 0, 509, 638.806, 0, 0, 0, 0, -23.5002, 638.806, 0, 0, 0, 0, -23.5002, -18.1934 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -34.4999
margin_top = -13.5
margin_right = 513.5
margin_bottom = 651.5
color = Color( 0.454902, 0.286275, 0.286275, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 242.5, 229.25 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 320 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -0.132395, 10.1398 )
scale = Vector2( 0.994366, 0.984127 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -23.5002, -18.1934 )
rotation = -0.00849836

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="inGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="gameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game_signal" from="UI" to="." method="new_game"]
